tests/error/tracing_errors/bad_return2.py
from guppylang.decorator import guppy


@guppy.comptime
def test() -> int:
    if True:
        return 1.0
    else:
        return 1


test.compile()
